# orgapy

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  README.rst  gen_vapid_keys.py  orgapy.remixicon  pyproject.toml  requirements.txt  setup.py
orgapy/: admin.py  apps.py  forms.py  middlewares.py  models.py  urls.py  utils.py  views.py
orgapy/migrations/: 0001_initial.py  0002_note_date_access.py  0002_project_status_alter_project_title.py  0003_auto_20200120_2152.py  0003_settings_mood_activities_settings_mood_log_hours_and_more.py  0004_alter_project_status.py  0004_auto_20200120_2200.py  0005_caldavsettings.py  0005_settings_groceries_data.py  0006_dailyobjective_objective_weeklyobjective.py  0006_settings_mood_log_lookback_days.py  0007_author_quote_work.py  0007_delete_pushsubscription.py  0008_auto_20210111_0903.py  0008_document_project_document.py  0009_create_documents.py  0009_remove_note_slug.py  0010_delete_caldavsettings.py  0010_documents_references.py  0011_auto_20210524_1809.py  0011_remove_note_map_refs_remove_note_categories_and_more.py  0012_auto_20230308_1051.py  0012_reduce_nonces.py  0013_nonces_references.py  0013_note_pinned.py  0014_project.py  0014_project_nonce_alter_document_nonce.py  0015_generate_project_nonces.py  0015_remove_objective_step_objective_goal_and_more.py  0016_alter_project_nonce.py  0016_project_rank.py  0017_enable_document_full_text_search.py  0017_rename_quote_oldquote.py  0018_document_updated_at.py  0018_quote.py  0019_remove_project_nonce_project_date_archived_and_more.py  0020_alter_quote_options_calendar.py  (+47 more)
(+162 files in other folders)
