[project]
name = "django-orgapy"
version = "4.12.1"
authors = [
  { name="Yohan Chalier", email="yohan@chalier.fr" },
]
description = "A personnal notebook webapp"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
    "Django",
    "caldav",
    "python-dateutil",
    "pywebpush",
]

[project.urls]
Homepage = "https://github.com/ychalier/orgapy"
Issues = "https://github.com/ychalier/orgapy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orgapy"]
